--- a/index.html
+++ b/index.html
@@ -1,50 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Button Quest - Level 1</title>
-  <style>
-    body {
-      background: #0f172a;
-      color: white;
-      font-family: Arial, sans-serif;
-      text-align: center;
-      padding-top: 60px;
-    }
-    button {
-      padding: 20px 40px;
-      font-size: 22px;
-      border: none;
-      border-radius: 10px;
-      cursor: pointer;
-      background: #22c55e;
-    }
-  </style>
+<meta charset="UTF-8">
+<title>Button Quest</title>
+<style>
+  body {
+    margin: 0;
+    background: #0f172a;
+    color: white;
+    font-family: monospace;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+  }
+
+  .box {
+    border: 3px solid white;
+    padding: 30px;
+    width: 500px;
+    text-align: center;
+    animation: flicker 3s infinite;
+  }
+
+  @keyframes flicker {
+    0%, 100% { opacity: 1; }
+    50% { opacity: 0.95; }
+    52% { opacity: 0.85; }
+    54% { opacity: 1; }
+  }
+
+  button {
+    margin-top: 20px;
+    padding: 15px 30px;
+    font-size: 20px;
+    background: #22c55e;
+    border: none;
+    color: black;
+    cursor: pointer;
+    border-radius: 6px;
+  }
+
+  button:disabled {
+    background: #1e293b;
+    color: #64748b;
+    cursor: not-allowed;
+  }
+
+  .shake {
+    animation: shake 0.2s infinite;
+  }
+
+  @keyframes shake {
+    0% { transform: translate(0); }
+    25% { transform: translate(2px, -2px); }
+    50% { transform: translate(-2px, 2px); }
+    75% { transform: translate(2px, 2px); }
+    100% { transform: translate(0); }
+  }
+</style>
 </head>
 <body>
 
-<h1>🎮 Button Quest</h1>
-<h2>Level 1: Reaction Test</h2>
-<p>Click the button as fast as you can when it turns green.</p>
-
-<button id="btn" disabled>WAIT...</button>
-<p id="result"></p>
+<div class="box" id="box">
+  <h2>* A button stands before you.</h2>
+  <p id="text">* Stay still.</p>
+  <button id="btn" disabled>WAIT</button>
+</div>
 
 <script>
   const btn = document.getElementById("btn");
-  const result = document.getElementById("result");
-  let startTime;
+  const text = document.getElementById("text");
+  const box = document.getElementById("box");
+  let start;
 
   setTimeout(() => {
+    text.textContent = "* NOW.";
+    btn.textContent = "CLICK";
     btn.disabled = false;
-    btn.textContent = "CLICK!";
-    startTime = Date.now();
+    box.classList.add("shake");
+    start = Date.now();
   }, Math.random() * 3000 + 2000);
 
   btn.onclick = () => {
-    const reaction = Date.now() - startTime;
-    localStorage.setItem("score1", reaction);
-    result.textContent = `Reaction time: ${reaction} ms`;
+    const time = Date.now() - start;
+    localStorage.setItem("reaction", time);
+    text.textContent = `* ${time} ms. You felt it.`;
+    box.classList.remove("shake");
     setTimeout(() => location.href = "index2.html", 2000);
   };
 </script>
