--- a/index2.html
+++ b/index2.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Button Quest</title>
+<title>Button Quest — Battle</title>
+
 <style>
   body {
     margin: 0;
@@ -16,75 +17,164 @@
     margin-top: 20px;
     background: black;
     border: 3px solid white;
+    image-rendering: pixelated;
+    width: 600px;
+    height: 450px;
   }
 </style>
 </head>
 <body>
 
-<h2>* The arena closes in.</h2>
-<p>* Survive.</p>
+<h2 id="levelText">* LEVEL 1</h2>
+<p>* Do not get hit.</p>
 
-<canvas id="c" width="400" height="300"></canvas>
+<canvas id="game" width="200" height="150"></canvas>
 
 <script>
-  const c = document.getElementById("c");
-  const ctx = c.getContext("2d");
+const canvas = document.getElementById("game");
+const ctx = canvas.getContext("2d");
 
-  let player = { x: 190, y: 140, r: 6 };
-  let bullets = [];
-  let frames = 0;
+let keys = {};
+document.addEventListener("keydown", e => keys[e.key] = true);
+document.addEventListener("keyup", e => keys[e.key] = false);
 
-  document.addEventListener("keydown", e => {
-    if (e.key === "ArrowLeft") player.x -= 6;
-    if (e.key === "ArrowRight") player.x += 6;
-    if (e.key === "ArrowUp") player.y -= 6;
-    if (e.key === "ArrowDown") player.y += 6;
+let level = 1;
+let frame = 0;
+let bullets = [];
+
+/* PLAYER */
+const player = {
+  x: 100,
+  y: 75,
+  vx: 0,
+  vy: 0,
+  accel: 0.4,
+  max: 2.5,
+  size: 4
+};
+
+/* BULLET PATTERNS */
+function spawn() {
+  switch(level) {
+    case 1:
+      bullets.push({x:Math.random()*200,y:-5,vx:0,vy:1});
+      break;
+    case 2:
+      bullets.push({x:-5,y:Math.random()*150,vx:2,vy:0});
+      break;
+    case 3:
+      bullets.push({x:205,y:Math.random()*150,vx:-2,vy:0});
+      break;
+    case 4:
+      bullets.push({x:Math.random()*200,y:-5,vx:Math.sin(frame/10),vy:1.5});
+      break;
+    case 5: {
+      let dx = player.x - 100;
+      let dy = player.y;
+      let m = Math.hypot(dx,dy);
+      bullets.push({x:100,y:0,vx:(dx/m)*2,vy:(dy/m)*2});
+      break;
+    }
+    case 6:
+      for(let i=0;i<200;i+=20)
+        bullets.push({x:i,y:-5,vx:0,vy:2});
+      break;
+    case 7:
+      bullets.push({
+        x:100,y:75,
+        vx:Math.cos(frame/8)*2,
+        vy:Math.sin(frame/8)*2
+      });
+      break;
+    case 8:
+      bullets.push({
+        x:Math.random()*200,
+        y:Math.random()*150,
+        vx:Math.random()*4-2,
+        vy:Math.random()*4-2
+      });
+      break;
+    case 9:
+      bullets.push({x:100,y:-5,vx:0,vy:3});
+      bullets.push({x:-5,y:75,vx:3,vy:0});
+      break;
+    case 10:
+      bullets.push({
+        x:Math.random()*200,
+        y:-5,
+        vx:Math.random()*2-1,
+        vy:3
+      });
+      break;
+  }
+}
+
+function update() {
+  frame++;
+
+  /* INPUT */
+  if(keys.ArrowLeft) player.vx -= player.accel;
+  if(keys.ArrowRight) player.vx += player.accel;
+  if(keys.ArrowUp) player.vy -= player.accel;
+  if(keys.ArrowDown) player.vy += player.accel;
+
+  player.vx *= 0.9;
+  player.vy *= 0.9;
+
+  player.vx = Math.max(-player.max, Math.min(player.max, player.vx));
+  player.vy = Math.max(-player.max, Math.min(player.max, player.vy));
+
+  player.x += player.vx;
+  player.y += player.vy;
+
+  player.x = Math.max(5, Math.min(195, player.x));
+  player.y = Math.max(5, Math.min(145, player.y));
+
+  if(frame % 15 === 0) spawn();
+
+  bullets.forEach(b => {
+    b.x += b.vx;
+    b.y += b.vy;
+
+    if(Math.hypot(b.x-player.x,b.y-player.y) < 4) {
+      alert("* You were hit.");
+      location.reload();
+    }
   });
 
-  function spawn() {
-    bullets.push({
-      x: Math.random() * 400,
-      y: -10,
-      vy: 3 + Math.random() * 2
-    });
-  }
+  bullets = bullets.filter(b =>
+    b.x>-20 && b.x<220 && b.y>-20 && b.y<170
+  );
 
-  function loop() {
-    ctx.clearRect(0,0,400,300);
-
-    // player (soul)
-    ctx.fillStyle = "lime";
-    ctx.beginPath();
-    ctx.arc(player.x, player.y, player.r, 0, Math.PI * 2);
-    ctx.fill();
-
-    // bullets
-    ctx.fillStyle = "red";
-    bullets.forEach(b => {
-      b.y += b.vy;
-      ctx.fillRect(b.x, b.y, 8, 8);
-
-      const dx = b.x - player.x;
-      const dy = b.y - player.y;
-      if (Math.sqrt(dx*dx + dy*dy) < 10) {
-        alert("* You failed.");
-        location.reload();
-      }
-    });
-
-    if (frames % 20 === 0) spawn();
-    frames++;
-
-    if (frames > 900) {
-      localStorage.setItem("survived", "YES");
+  if(frame > 600) {
+    level++;
+    frame = 0;
+    bullets = [];
+    document.getElementById("levelText").textContent = "* LEVEL " + level;
+    if(level > 10) {
+      localStorage.setItem("battle","CLEARED");
       location.href = "index3.html";
       return;
     }
-
-    requestAnimationFrame(loop);
   }
 
-  loop();
+  draw();
+  requestAnimationFrame(update);
+}
+
+function draw() {
+  ctx.clearRect(0,0,200,150);
+
+  ctx.fillStyle = "lime";
+  ctx.fillRect(player.x-2,player.y-2,4,4);
+
+  ctx.fillStyle = "red";
+  bullets.forEach(b =>
+    ctx.fillRect(Math.round(b.x),Math.round(b.y),3,3)
+  );
+}
+
+update();
 </script>
 
 </body>
