--- a/index3.html
+++ b/index3.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Button Quest</title>
+<title>Button Quest — End</title>
 <style>
   body {
     margin: 0;
-    background: linear-gradient(135deg, #1e3a8a, #020617);
+    background: linear-gradient(135deg,#1e3a8a,#020617);
     color: white;
     font-family: monospace;
     display: flex;
@@ -16,9 +16,9 @@
   }
 
   .box {
+    width: 520px;
     border: 3px solid white;
     padding: 30px;
-    width: 500px;
     text-align: center;
   }
 
@@ -31,16 +31,16 @@
 <body>
 
 <div class="box">
-  <h2>* You remain.</h2>
+  <h2>* You endured.</h2>
   <p id="stats"></p>
-  <p>* Determination lingers.</p>
-  <a href="index.html">> Try again</a>
+  <p>* Determination persists.</p>
+  <a href="index.html">> Begin again</a>
 </div>
 
 <script>
-  const r = localStorage.getItem("reaction");
+  const reaction = localStorage.getItem("reaction");
   document.getElementById("stats").innerHTML =
-    `* Reaction time: <b>${r} ms</b><br>* Status: ALIVE`;
+    `* Reaction time: ${reaction} ms<br>* Status: ALIVE`;
 </script>
 
 </body>
