--- a/index2.html
+++ b/index2.html
@@ -5,34 +5,35 @@
 <title>Button Quest — Battle</title>
 
 <style>
-  body {
-    margin: 0;
-    background: #020617;
-    color: white;
-    font-family: monospace;
-    text-align: center;
-  }
-
-  canvas {
-    margin-top: 20px;
-    background: black;
-    border: 3px solid white;
-    image-rendering: pixelated;
-    width: 600px;
-    height: 450px;
-  }
+body {
+  margin: 0;
+  background: #020617;
+  color: white;
+  font-family: monospace;
+  text-align: center;
+}
+canvas {
+  margin-top: 20px;
+  background: black;
+  border: 3px solid white;
+  image-rendering: pixelated;
+  width: 600px;
+  height: 450px;
+}
 </style>
 </head>
 <body>
 
 <h2 id="levelText">* LEVEL 1</h2>
-<p>* Do not get hit.</p>
+<p>* Survive.</p>
 
 <canvas id="game" width="200" height="150"></canvas>
 
 <script>
 const canvas = document.getElementById("game");
 const ctx = canvas.getContext("2d");
+
+const playerColor = localStorage.getItem("playerColor") || "lime";
 
 let keys = {};
 document.addEventListener("keydown", e => keys[e.key] = true);
@@ -42,69 +43,67 @@ let level = 1;
 let frame = 0;
 let bullets = [];
 
-/* PLAYER */
 const player = {
-  x: 100,
-  y: 75,
-  vx: 0,
-  vy: 0,
-  accel: 0.4,
-  max: 2.5,
+  x: 100, y: 75,
+  vx: 0, vy: 0,
+  accel: 0.4, max: 2.5,
   size: 4
 };
 
-/* BULLET PATTERNS */
+function bullet(x,y,vx,vy,size,color) {
+  return {x,y,vx,vy,size,color};
+}
+
 function spawn() {
   switch(level) {
     case 1:
-      bullets.push({x:Math.random()*200,y:-5,vx:0,vy:1});
+      bullets.push(bullet(Math.random()*200,-5,0,1,2,"red"));
       break;
     case 2:
-      bullets.push({x:-5,y:Math.random()*150,vx:2,vy:0});
+      bullets.push(bullet(Math.random()*200,-8,0,0.8,4,"#3b82f6"));
       break;
     case 3:
-      bullets.push({x:205,y:Math.random()*150,vx:-2,vy:0});
+      bullets.push(bullet(-5,Math.random()*150,3,0,2,"orange"));
       break;
     case 4:
-      bullets.push({x:Math.random()*200,y:-5,vx:Math.sin(frame/10),vy:1.5});
+      bullets.push(bullet(Math.random()*200,-5,Math.sin(frame/10),1.5,3,"red"));
       break;
     case 5: {
       let dx = player.x - 100;
       let dy = player.y;
       let m = Math.hypot(dx,dy);
-      bullets.push({x:100,y:0,vx:(dx/m)*2,vy:(dy/m)*2});
+      bullets.push(bullet(100,0,(dx/m)*2.5,(dy/m)*2.5,2,"white"));
       break;
     }
     case 6:
       for(let i=0;i<200;i+=20)
-        bullets.push({x:i,y:-5,vx:0,vy:2});
+        bullets.push(bullet(i,-6,0,1.5,4,"#3b82f6"));
       break;
     case 7:
-      bullets.push({
-        x:100,y:75,
-        vx:Math.cos(frame/8)*2,
-        vy:Math.sin(frame/8)*2
-      });
+      bullets.push(bullet(100,75,Math.cos(frame/8)*2,Math.sin(frame/8)*2,2,"orange"));
       break;
     case 8:
-      bullets.push({
-        x:Math.random()*200,
-        y:Math.random()*150,
-        vx:Math.random()*4-2,
-        vy:Math.random()*4-2
-      });
+      bullets.push(bullet(
+        Math.random()*200,
+        Math.random()*150,
+        Math.random()*4-2,
+        Math.random()*4-2,
+        Math.random()>0.5?4:2,
+        "red"
+      ));
       break;
     case 9:
-      bullets.push({x:100,y:-5,vx:0,vy:3});
-      bullets.push({x:-5,y:75,vx:3,vy:0});
+      bullets.push(bullet(100,-5,0,3,3,"orange"));
+      bullets.push(bullet(-5,75,3,0,3,"orange"));
       break;
     case 10:
-      bullets.push({
-        x:Math.random()*200,
-        y:-5,
-        vx:Math.random()*2-1,
-        vy:3
-      });
+      const types = [
+        {s:2,c:"red",v:2},
+        {s:3,c:"orange",v:3},
+        {s:4,c:"#3b82f6",v:1.2}
+      ];
+      let t = types[Math.floor(Math.random()*types.length)];
+      bullets.push(bullet(Math.random()*200,-5,Math.random()*1-0.5,t.v,t.s,t.c));
       break;
   }
 }
@@ -112,7 +111,6 @@ function spawn() {
 function update() {
   frame++;
 
-  /* INPUT */
   if(keys.ArrowLeft) player.vx -= player.accel;
   if(keys.ArrowRight) player.vx += player.accel;
   if(keys.ArrowUp) player.vy -= player.accel;
@@ -135,16 +133,13 @@ function update() {
   bullets.forEach(b => {
     b.x += b.vx;
     b.y += b.vy;
-
-    if(Math.hypot(b.x-player.x,b.y-player.y) < 4) {
+    if(Math.hypot(b.x-player.x,b.y-player.y) < b.size + 2) {
       alert("* You were hit.");
       location.reload();
     }
   });
 
-  bullets = bullets.filter(b =>
-    b.x>-20 && b.x<220 && b.y>-20 && b.y<170
-  );
+  bullets = bullets.filter(b => b.x>-20 && b.x<220 && b.y>-20 && b.y<170);
 
   if(frame > 600) {
     level++;
@@ -152,7 +147,6 @@ function update() {
     bullets = [];
     document.getElementById("levelText").textContent = "* LEVEL " + level;
     if(level > 10) {
-      localStorage.setItem("battle","CLEARED");
       location.href = "index3.html";
       return;
     }
@@ -165,13 +159,13 @@ function update() {
 function draw() {
   ctx.clearRect(0,0,200,150);
 
-  ctx.fillStyle = "lime";
+  ctx.fillStyle = playerColor;
   ctx.fillRect(player.x-2,player.y-2,4,4);
 
-  ctx.fillStyle = "red";
-  bullets.forEach(b =>
-    ctx.fillRect(Math.round(b.x),Math.round(b.y),3,3)
-  );
+  bullets.forEach(b => {
+    ctx.fillStyle = b.color;
+    ctx.fillRect(Math.round(b.x),Math.round(b.y),b.size,b.size);
+  });
 }
 
 update();
